# job-processing

./: README.md  job_processing.db  postman_collection.json  pyproject.toml  test_api.py
backend/: __init__.py  database.py  main.py  models.py  services.py
