[project]
name = "job-processing"
version = "1.0.0"
description = "A high-performance asynchronous Job Processing API with API Key management, Rate Limiting, and Background Tasks."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Praroop Anand", email = "praroop.anand@example.com" }
]
keywords = ["fastapi", "asyncio", "job-processing", "rate-limiting", "sqlalchemy", "uv"]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
dev = "uvicorn backend.main:app --reload"
start = "uvicorn backend.main:app --host 0.0.0.0 --port 8000"
test = "python test_api.py"

[tool.uv]
managed = true
package = false
